# REngine-DiligentNativeDriver

./: .gitignore  CMakeLists.txt  build-android.bat  build-linux.sh  build.bat
DiligentCore/: CMakeLists.txt
DiligentCore/Common/interface/: DummyReferenceCounters.hpp  RefCountedObjectImpl.hpp
DiligentCore/Graphics/GraphicsEngineOpenGL/src/: EngineFactoryOpenGL.cpp  GLContextWindows.cpp
DiligentCore/Graphics/GraphicsEngineVulkan/src/VulkanUtilities/: VulkanInstance.cpp
DiligentCore/Primitives/interface/: ReferenceCounters.h
jslib/: command-buffer.js  core.js  device.js  driver.js  enums.js  exports.js  native-module.js  native-object.js  object-registry.js  pipeline-state.js  rengine.js  result.js  shader.js  swapchain-structs.js  swapchain.js  texture-view.js  texture.js
src/: Api.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  DataBlob.cpp  DataBlob.h  Definitions.h  Device.cpp  Device.h  DriverFactory.cpp  DriverFactory.h  Object.cpp  Object.h  PipelineState.cpp  PipelineState.h  PipelineStateCache.cpp  PipelineStateCache.h  Shader.cpp  Shader.h  ShaderResourceBinding.cpp  ShaderResourceBinding.h  StringDatabase.cpp  StringDatabase.h  Structs.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  Utils.cpp  rengine.js
